# Turtlesim-Project

./: README.md
code/code/install/: local_setup.sh  setup.sh
code/code/install/dummy_node1/lib/dummy_node1/: dummy_cpp_node
code/code/install/dummy_node1/share/ament_index/resource_index/package_run_dependencies/: dummy_node1
code/code/install/dummy_node1/share/ament_index/resource_index/parent_prefix_path/: dummy_node1
code/code/install/dummy_node1/share/dummy_node1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
code/code/install/dummy_node1/share/dummy_node1/launch/: dummy.launch.py
code/code/install/dummy_node2/lib/dummy_node2/: dummy_cpp_node
code/code/install/dummy_node2/share/ament_index/resource_index/rclcpp_components/: dummy_node2
code/code/install/dummy_node2/share/dummy_node2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
code/code/install/dummy_node2/share/dummy_node2/cmake/: dummy_node2Config.cmake
code/code/install/dummy_node2/share/dummy_node2/config/: dummy_config.yaml
code/code/install/interfaces/action/interfaces/action/: Custom.action
code/code/install/interfaces/include/interfaces/interfaces/action/: custom.h  custom.hpp
code/code/install/interfaces/include/interfaces/interfaces/action/detail/: custom__functions.c  custom__functions.h  custom__rosidl_typesupport_introspection_c.h  custom__struct.hpp  custom__traits.hpp  custom__type_support.c  custom__type_support.cpp  custom__type_support.h
code/code/install/interfaces/local/lib/python3.10/dist-packages/interfaces/action/: __init__.py
code/code/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
code/code/install/interfaces/share/interfaces/: local_setup.sh  package.sh  package.xml
code/code/install/interfaces/share/interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake
code/code/log/: latest_build
code/code/src/dummy_node1/: CMakeLists.txt
code/code/src/dummy_node1/config/: dummy_config.yaml
code/code/src/dummy_node1/src/: dummy_cpp_node.cpp
code/code/src/dummy_node2/: CMakeLists.txt
code/code/src/dummy_node2/config/: config.json
code/code/src/dummy_node2/launch/: dummy.launch.py
code/code/src/dummy_node2/src/: dummy_cpp_node.cpp
code/code/src/interfaces/: CMakeLists.txt
